objects/myIfeOrderLines__x.object
<CustomObject>
    <description>myIfeOrderLines</description>
    <externalDataSource>Order_Status</externalDataSource>
    <externalName>myIfeOrderLines</externalName>
    <fields>
        <fullName>CUSTOMER_PO_LINE__c</fullName>
        <description>CUSTOMER_PO_LINE</description>
        <externalDeveloperName>CUSTOMER_PO_LINE</externalDeveloperName>
        <label>CUSTOMER_PO_LINE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELIVERY_ID__c</fullName>
        <description>DELIVERY_ID</description>
        <externalDeveloperName>DELIVERY_ID</externalDeveloperName>
        <label>DELIVERY_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTENDED_PRICE__c</fullName>
        <description>EXTENDED_PRICE</description>
        <externalDeveloperName>EXTENDED_PRICE</externalDeveloperName>
        <label>EXTENDED_PRICE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FULFILLED_QUANTITY__c</fullName>
        <description>FULFILLED_QUANTITY</description>
        <externalDeveloperName>FULFILLED_QUANTITY</externalDeveloperName>
        <label>FULFILLED_QUANTITY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEADER_ID__c</fullName>
        <description>HEADER_ID</description>
        <externalDeveloperName>HEADER_ID</externalDeveloperName>
        <label>HEADER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTALL_LOCATION__c</fullName>
        <description>INSTALL_LOCATION</description>
        <externalDeveloperName>INSTALL_LOCATION</externalDeveloperName>
        <label>INSTALL_LOCATION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_DESCRIPTION__c</fullName>
        <description>ITEM_DESCRIPTION</description>
        <externalDeveloperName>ITEM_DESCRIPTION</externalDeveloperName>
        <label>ITEM_DESCRIPTION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM__c</fullName>
        <description>ITEM</description>
        <externalDeveloperName>ITEM</externalDeveloperName>
        <label>ITEM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_ID__c</fullName>
        <description>LINE_ID</description>
        <externalDeveloperName>LINE_ID</externalDeveloperName>
        <label>LINE_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <description>LINE_NUMBER</description>
        <externalDeveloperName>LINE_NUMBER</externalDeveloperName>
        <label>LINE_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERED_ITEM__c</fullName>
        <description>ORDERED_ITEM</description>
        <externalDeveloperName>ORDERED_ITEM</externalDeveloperName>
        <label>ORDERED_ITEM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERED_QUANTITY__c</fullName>
        <description>ORDERED_QUANTITY</description>
        <externalDeveloperName>ORDERED_QUANTITY</externalDeveloperName>
        <label>ORDERED_QUANTITY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_QUANTITY_UOM__c</fullName>
        <description>ORDER_QUANTITY_UOM</description>
        <externalDeveloperName>ORDER_QUANTITY_UOM</externalDeveloperName>
        <label>ORDER_QUANTITY_UOM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_SOURCE__c</fullName>
        <description>ORDER_SOURCE</description>
        <externalDeveloperName>ORDER_SOURCE</externalDeveloperName>
        <label>ORDER_SOURCE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_ORDER__c</fullName>
        <description>SALES_ORDER</description>
        <externalDeveloperName>SALES_ORDER</externalDeveloperName>
        <label>SALES_ORDER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULE_SHIP_DATE__c</fullName>
        <description>SCHEDULE_SHIP_DATE</description>
        <externalDeveloperName>SCHEDULE_SHIP_DATE</externalDeveloperName>
        <label>SCHEDULE_SHIP_DATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>STATUS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIT_SELLING_PRICE__c</fullName>
        <description>UNIT_SELLING_PRICE</description>
        <externalDeveloperName>UNIT_SELLING_PRICE</externalDeveloperName>
        <label>UNIT_SELLING_PRICE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>UOM</description>
        <externalDeveloperName>UOM</externalDeveloperName>
        <label>UOM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAREHOUSE__c</fullName>
        <description>WAREHOUSE</description>
        <externalDeveloperName>WAREHOUSE</externalDeveloperName>
        <label>WAREHOUSE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>myIfeOrderLines</label>
    <pluralLabel>myIfeOrderLines</pluralLabel>
</CustomObject>